<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        >

    <RadioGroup
            android:text="@string/gender"
            android:orientation="horizontal"
            android:layout_width="379dp"
            android:layout_height="30dp"
            android:id="@+id/gender"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="16dp">

        <RadioButton
                android:text="@string/Girl"
                android:checked="true"
                android:hint="@string/GIRL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/GIRL"
                android:layout_weight="1"/>

        <RadioButton
                android:text="@string/Boy"
                android:hint="@string/BOY"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/BOY"
                android:layout_weight="1"/>
    </RadioGroup>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="horizontal"
            android:layout_width="379dp"
            android:layout_height="30dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/gender"
            android:id="@+id/linearLayout2">

        <TextView
                android:text="@string/labelAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/labelAge"
                android:baselineAligned="false"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/year"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/year"
                app:layout_constraintStart_toEndOf="@+id/labelAge"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/month"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/month"
                android:baselineAligned="false"
                app:layout_constraintStart_toEndOf="@+id/year"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
            android:hint="@string/weight"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:inputType="numberDecimal"
            android:id="@+id/weight"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/height"
            android:importantForAutofill="no"/>

    <EditText
            android:hint="@string/height"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:inputType="numberDecimal"
            android:id="@+id/height"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            app:layout_constraintStart_toEndOf="@+id/weight"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            android:importantForAutofill="no"/>

    <Button
            android:text="@string/go"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:id="@+id/button"
            android:onClick="actionCentile"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/weight"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/BMI"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/button"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/centileWeight"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/BMI"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/centileHeight"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/centileWeight"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/centileBmi"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/centileHeight"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>